# starlette-async-jinja

./: .coverage-ratchet.json  .crackerjack.yaml  .gitignore  .libcst.codemod.yaml  .pre-commit-config-ai.yaml  .pre-commit-config-fast.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  QWEN.md  README.md  RULES.md  complexipy_results_2025_11_27__08:14:03.json  coverage.json  mypy.ini  pyproject.toml
.benchmarks/: README.md  benchmark_results_20250618_050944.txt
.github/: FUNDING.yml
.oneiric_cache/: domain_activity.sqlite  runtime_telemetry.json  workflow_checkpoints.sqlite
docs/: JINJA2_ASYNC_ENVIRONMENT_USAGE.md
starlette_async_jinja/: __init__.py  bccache.py  compiler.py  environment.py  loaders.py  responses.py
starlette_async_jinja/.skylos/: cache.sqlite
tests/: conftest.py  test_benchmarks.py  test_e2e.py  test_integration.py  test_json_response.py  test_macro_support_simple.py  test_missing_coverage.py  test_performance.py  test_responses.py
